2007-10-27  Julien  <julien.chaffraix@gmail.com>

Reviewed by Alexey.

        http://bugs.webkit.org/show_bug.cgi?id=13141
        XMLHttpRequest should set readyState to 0 after abort()

        Test: http/tests/xmlhttprequest/xmlhttprequest-abort-readyState.html

        * xml/XMLHttpRequest.cpp:
        (WebCore::XMLHttpRequest::open):
        (WebCore::XMLHttpRequest::abort):



Canonical link: https://commits.webkit.org/21072@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@27151 268f45cc-cd09-0410-ab3c-d52691b4dbfc